code smells wip